--- a/styles/Artwork.module.css
+++ b/styles/Artwork.module.css
@@ -22,14 +22,16 @@
 }
 .upper_text_bg {
 	position: absolute;
-	top: 40px;
+	top: -40px;
 	left: 50%;
-	transform: translateX(-55%);
-	letter-spacing: -22px;
+	transform: translateX(-50%);
+	letter-spacing: -18px;
+	text-align: center;
 }
 .upper_text_bg p {
 	opacity: 0.3;
-	font-size: 18rem;
+	font-size: 14rem;
+	line-height: 1.2;
 	font-family: "Monoton", cursive;
 	color: var(--border-color);
 }
